--- a/index.html
+++ b/index.html
@@ -4,15 +4,152 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap 101 Template</title>
-
+    <title>Digital-Ocean</title>
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
-
-    
   </head>
   <body>
+    <header>
+      <!-- header-menu -->
+      <section>
+        <div class="container">
+          <div class="row nav-menu">
+            <div class="alto-todo text-center col-md-3">Logo</div>
+            <div class="alto-todo text-center menu-center col-md-5">NAV</div>
+            <div class="alto-todo text-center menu-right col-md-4">NAV</div>
+          </div>
+        </div>
+      </section>
+
+      <!-- header-jumbotrom -->
+      <section>
+        <div class="container-fluid sfondo-jumbotrom">
+          <div class="row jumbotrom clearfix">
+            <div class="alto-todo col-md-7">a</div>
+            <div class="alto-todo col-md-5">a</div>
+          </div>  
+        </div>
+      </section>
+    </header>
+
+    <main>
+      <!-- main-sponsors -->
+      <section>
+        <div class="container-fluid sponsors">
+          <div class="row row-sponsors">
+            <div class="text-center coll-md-12">text</div>
+            <div class="text-center coll-md-12">logi</div>
+            <div class="text-center coll-md-12">link</div>
+          </div>
+        </div>
+      </section>
+
+      <!-- main-deploy and scale -->
+      <section>
+        <div class="container">
+          <div class="text-center row text-deploy">
+            <h3>Deploy and scale seamlessly</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas sed doloremque est quod commodi recusandae facere nisi quia dolorem eligendi saepe, quam neque rerum impedit? Inventore soluta rerum vitae enim!</p>
+          </div>
+        </div>
+        <section>
+          <div class="container">
+            <div class="row deploy-cont">
+              <div class="col-md-4 text-center">List</div>
+              <div class="col-md-8">
+                  <div class="row">
+                    <div class="col-md-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam esse debitis inventore ipsam, soluta omnis ut nam saepe fugiat facilis consectetur possimus in quo aperiam consequatur deleniti aut enim doloremque.</div>
+                    <div class="col-md-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, hic quos sint facere fuga porro consequuntur laborum, dolorum error et blanditiis tempore, molestias nulla incidunt corporis quam repellat iure nam!</div>
+                    <div class="col-md-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime reprehenderit a quibusdam perspiciatis harum dolor aut mollitia quaerat ullam expedita, cumque alias nesciunt ex voluptas necessitatibus. Animi id eius ullam!</div>
+                    <div class="col-md-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, sunt? Repellat consequatur omnis, iste voluptatum autem fugit laboriosam facere veniam sapiente saepe eligendi molestias sed! Quaerat vero consectetur labore reprehenderit?</div>
+                  </div>
+              </div>
+            </div>
+          </div>
+        </section>
+      </section>
+
+      <!-- main-desing for developers -->
+      <section>
+        <div class="container-fluid desing-cont">
+          <div class="row">
+            <div class="col-md-12 text-center text-design">
+              <h3>Designed for developers</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore, id? Veritatis impedit quod autem modi, consequuntur nesciunt ducimus ad provident libero corporis aut eveniet iusto, dolorem aperiam labore expedita explicabo?</p>
+            </div>
+            <div class="col-md-12 text-center img-desing ">img</div>
+          </div>
+        </div>
+      </section>
+
+      <!-- main-the features your business -->
+      <section>
+        <div class="container features-cont">
+          <div class="row features-row">
+            <div class="col-md-12 text-center">
+              <h3>The features your business needs</h3>
+            </div>
+            <div class="col-md-12">
+              <div class="row">
+                <div class="col-md-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero perspiciatis dicta provident unde rerum adipisci aliquam maxime sed odio, distinctio repudiandae, sint itaque quibusdam, velit magni consectetur cumque commodi sit.</div>
+                <div class="col-md-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius quaerat placeat illum corrupti magnam quod ea, necessitatibus repellendus assumenda eveniet? Iusto maxime repellat animi laudantium quia consequuntur similique hic ab.</div>
+                <div class="col-md-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda voluptate eveniet aut, voluptas itaque aliquam et esse veritatis consequatur vitae dolor optio quis voluptatibus iure vel atque sint rerum illo!</div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      
+      <!-- main-paises -->
+      <section>
+        <div class="container-fluid paises-cont">
+          <div class="row paises-row">
+            <div class="col-md-12 text-center">
+              <h3>Service your customers around the world from 12 regions</h3>
+            </div>
+            <div class="col-md-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni ipsa esse cumque mollitia omnis maiores suscipit, praesentium excepturi quae exercitationem. Natus blanditiis nulla amet repudiandae eveniet assumenda et ducimus molestias architecto fugiat at impedit temporibus, quasi similique? Reiciendis dolorem sapiente, laborum, repellendus fugit quam maxime molestias voluptatum ipsum optio delectus deserunt, aliquid similique ad qui nihil veritatis est praesentium dolores ab vero dolor? Vitae fugiat, hic tempora ratione assumenda consequuntur aut ut, reiciendis, commodi perferendis totam illum. Voluptatem blanditiis mollitia sed ea neque corrupti nisi, deserunt repellendus temporibus quas, officia non doloremque perspiciatis voluptates autem aperiam, doloribus laborum molestiae nemo.</div>
+            <div class="col-md-6">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maxime nobis quas doloribus, molestias impedit aspernatur saepe. Ab excepturi deserunt consectetur voluptatem deleniti dolorum possimus, nisi ipsa id, accusamus tenetur quidem error odio reiciendis modi harum praesentium natus. Unde ullam impedit aperiam beatae sint enim quisquam at aut suscipit, deserunt atque ut qui molestias quam inventore culpa neque veritatis voluptates nobis porro accusamus. Ullam quibusdam esse consectetur debitis aliquid quidem minus saepe est provident, quo impedit neque veritatis, similique exercitationem nihil voluptatem totam asperiores modi molestias maxime dolore voluptatibus voluptates. Nesciunt dolorem mollitia sed numquam vitae rerum, repellendus maxime reiciendis sint.</div>
+          </div>
+        </div>
+      </section>
+
+      <!-- main-development teams -->
+      <section>
+        <div class="container-fluid development-cont">
+          <div class="row">
+            <div class="col-md-12 text-center text-development">
+              <h3>Development teams love DigitalOcean</h3>
+            </div>
+            <div class="col-md-12 text-center img-development ">img</div>
+          </div>
+        </div>
+      </section>
+
+      <!-- main- star-bottom -->
+      <section>
+        <div class="container-fluid">
+          <div class="row star-bottom">
+            <div class="col-md-12 text-center star-bottom-text ">
+              <h4>Get started now.</h4>
+              <p>boton</p>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <footer>
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-md-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic incidunt corrupti eum odio assumenda molestias facilis! Modi maxime velit dolorem autem tenetur, at, voluptates amet sit recusandae, aliquid sapiente hic.</div>
+          <div class="col-md-2">Company</div>
+          <div class="col-md-2">Products</div>
+          <div class="col-md-2">Community</div>
+          <div class="col-md-2">Support</div>
+        </div>
+      </div>
+    </footer>
 
 
 
