--- a/index.html
+++ b/index.html
@@ -71,16 +71,26 @@
               <!-- registration -->
               <div class="alto-todo col-md-5 col-sm-5 col-xs-12 registration text-center">
                 <h3>Deploy your app in seconds.</h3>
-                <a href="">Get started now.</a>
+                <a class="get-started" href="">
+                  Get started now.
+                </a>
                 <input type="text" class="form-control" placeholder="Email">
                 <input type="text" class="form-control" placeholder="Password">
-                <span class="label label-default largo-todo inline-block">
-                  create your account
-                </span>
-                <span class="label label-default largo-todo inline-block">
-                  <i class="fab fa-google"></i>
-                  Sign up with google
-                </span>
+                <a href="#">
+                  <span class="label label-default largo-todo inline-block">
+                    Create your account
+                  </span>
+                </a>
+                <a href="#">
+                  <span class="label label-default largo-todo inline-block">
+                    <i class="fab fa-google"></i>
+                    Sign up with google
+                  </span>
+                </a>
+                <p>
+                  By signing up you agree to the
+                  <a href="#">Terms of Service</a>
+                </p>
               </div>
             </div>  
           </div>
@@ -91,20 +101,40 @@
     <main>
       <!-- main-sponsors -->
       <section>
-        <div class="container-fluid sponsors">
-          <div class="row row-sponsors">
-            <div class="text-center coll-md-12">text</div>
-            <div class="text-center coll-md-12">
-              <div class="row largo-todo"><!--pregunta scroll-->
-                <div class="col-sm-2 col-xs-6">Logo</div>
-                <div class="col-sm-2 col-xs-6">Logo</div>
-                <div class="col-sm-2 col-xs-6">Logo</div>
-                <div class="col-sm-2 col-xs-6">Logo</div>
-                <div class="col-sm-2 col-xs-6">Logo</div>
-                <div class="col-sm-2 col-xs-6">Logo</div>
+        <div class="sponsors">
+          <div class="container">
+            <div class="row row-sponsors">
+              <div class="text-center coll-md-12">
+                <h5>INNOVATIVE BUSINESSES TRUST DIGITALOCEAN</h5>
+              </div>
+              <div class="text-center coll-md-12">
+                <div class="row"><!--pregunta scroll-->
+                  <div class="col-sm-2 col-xs-6 img-sponsors">
+                    <img src="img/docker.svg" alt="docker">
+                  </div>
+                  <div class="col-sm-2 col-xs-6 img-sponsors">
+                    <img src="img/gitlab.svg" alt="gitlab">
+                  </div>
+                  <div class="col-sm-2 col-xs-6 img-sponsors">
+                    <img src="img/slack.svg" alt="slack">
+                  </div>
+                  <div class="col-sm-2 col-xs-6 img-sponsors">
+                    <img src="img/hashicorp.svg" alt="hashicorp">
+                  </div>
+                  <div class="col-sm-2 col-xs-6 img-sponsors">
+                    <img src="img/wework.svg" alt="wework">
+                  </div>
+                  <div class="col-sm-2 col-xs-6 img-sponsors">
+                    <img src="img/splunk.svg" alt="splunk">
+                  </div>
+                </div>
+              </div>
+              <div class="text-center coll-md-12">
+                <a href="#">
+                  View customer stories >
+                </a>
               </div>
             </div>
-            <div class="text-center coll-md-12">link</div>
           </div>
         </div>
       </section>
