--- a/index.html
+++ b/index.html
@@ -107,27 +107,27 @@
               <div class="text-center coll-md-12">
                 <h5>INNOVATIVE BUSINESSES TRUST DIGITALOCEAN</h5>
               </div>
-              <div class="text-center coll-md-12">
-                <div class="row"><!--pregunta scroll-->
-                  <div class="col-sm-2 col-xs-6 img-sponsors">
-                    <img src="img/docker.svg" alt="docker">
-                  </div>
-                  <div class="col-sm-2 col-xs-6 img-sponsors">
-                    <img src="img/gitlab.svg" alt="gitlab">
-                  </div>
-                  <div class="col-sm-2 col-xs-6 img-sponsors">
-                    <img src="img/slack.svg" alt="slack">
-                  </div>
-                  <div class="col-sm-2 col-xs-6 img-sponsors">
-                    <img src="img/hashicorp.svg" alt="hashicorp">
-                  </div>
-                  <div class="col-sm-2 col-xs-6 img-sponsors">
-                    <img src="img/wework.svg" alt="wework">
-                  </div>
-                  <div class="col-sm-2 col-xs-6 img-sponsors">
-                    <img src="img/splunk.svg" alt="splunk">
-                  </div>
-                </div>
+              <div class="coll-md-12">
+                <ul class="list-inline text-center largo-todo">
+                  <li>
+                    <img src="img/docker.svg" alt="">
+                  </li>
+                  <li>
+                    <img src="img/gitlab.svg" alt="">
+                  </li>
+                  <li>
+                    <img src="img/slack.svg" alt="">
+                  </li>
+                  <li>
+                    <img src="img/hashicorp.svg" alt="">
+                  </li>
+                  <li>
+                    <img src="img/wework.svg" alt="">
+                  </li>
+                  <li
+                  ><img src="img/splunk.svg" alt="">
+                  </li>
+                </ul>
               </div>
               <div class="text-center coll-md-12">
                 <a href="#">
@@ -144,19 +144,54 @@
         <div class="container">
           <div class="text-center row text-deploy">
             <h3>Deploy and scale seamlessly</h3>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas sed doloremque est quod commodi recusandae facere nisi quia dolorem eligendi saepe, quam neque rerum impedit? Inventore soluta rerum vitae enim!</p>
+            <p>Our optimized configuration process saves your team time when running and scaling distributed applications,Al & macchine learning workloads,hosted sevices,clients websites, or CI/CD environments.</p>
           </div>
         </div>
         <section>
           <div class="container">
             <div class="row deploy-cont">
-              <div class="col-sm-4 text-center">List</div>
-              <div class="col-sm-8">
+              <div class="col-sm-offset-1 col-sm-2">
+                <ul>
+                  <li>
+                    <a href="#">Deploy</a>
+                  </li>
+                  <li>
+                    <a href="#">Manage</a>
+                  </li>
+                  <li>
+                    <a href="#">Secure</a>
+                  </li>
+                  <li>
+                    <a href="#">Scale</a>
+                  </li>
+                  <li>
+                    <a href="#">Monitor</a>
+                  </li>
+                  
+                </ul>
+              </div>
+              <div class="col-sm-9">
                   <div class="row">
-                    <div class="col-sm-6">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod ad quidem, veritatis porro vitae quas atque alias recusandae iste. Quos?</div>
-                    <div class="col-sm-6">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magni, modi natus? Incidunt minima quo omnis aliquam rerum quae adipisci necessitatibus!</div>
-                    <div class="col-sm-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel eligendi aliquam optio perferendis blanditiis ducimus dolores quisquam, corrupti commodi dolorem?</div>
-                    <div class="col-sm-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem natus minima totam delectus odio libero dicta iusto ex voluptatem at.</div>
+                    <div class="col-sm-6">
+                      <img src="img/cluster-deploy.svg" alt="cluster-deploy">
+                      <h4>Cluster deployments</h4>
+                      <p>Provision multiple Droplets (virtual machines) in seconds withour control panel,CLI,or directly against our API.</p>
+                    </div>
+                    <div class="col-sm-6">
+                      <img src="img/optimized-compute.svg" alt="optimized">
+                      <h4>Optimized compute types</h4>
+                      <p>Skip the install and configuration process with pre-buildt open source images supporting Rails,Cassandra,Docker and more.</p>
+                    </div>
+                    <div class="col-sm-6">
+                      <img src="img/one-click.svg" alt="one-click">
+                      <h4>One-click apps</h4>
+                      <p>Optimized compute typesSkip the install and configuration process with pre-built open source images supporting Rails, Cassandra, Docker and more.</p>
+                    </div>
+                    <div class="col-sm-6">
+                      <img src="img/global.svg" alt="global">
+                      <h4>Global availability</h4>
+                      <p>Deploy to any of our data center regions around the world.</p>
+                    </div>
                   </div>
               </div>
             </div>
